--- a/notes/w10-t-paired-ttest.Rmd
+++ b/notes/w10-t-paired-ttest.Rmd
@@ -3,13 +3,6 @@ title: "Topic 10. Hypothesis Testing:  t-test"
 author: "Cheng Peng"
 date: " "
 output:
-  pdf_document: 
-    toc: yes
-    toc_depth: 4
-    fig_caption: yes
-    number_sections: yes
-    fig_width: 5
-    fig_height: 4
   html_document: 
     toc: yes
     toc_float: true
@@ -18,6 +11,13 @@ output:
     fig_caption: yes
     number_sections: yes
     theme: readable
+  pdf_document: 
+    toc: yes
+    toc_depth: 4
+    fig_caption: yes
+    number_sections: yes
+    fig_width: 5
+    fig_height: 4
 ---
 <style type="text/css">
 
@@ -154,6 +154,9 @@ include_graphics("week10/example01.png")
 
 4. If the small size is small and the population is NOT normal, we cannot perform any test in this course.
 
+\
+
+<center><a href="https://mat121.s3.amazonaws.com/t-test.mp4"><img src = "https://github.com/pengdsci/MAT121/blob/main/VideoIcon.png?raw=true" width="400" height="250"></a>
 
 \
 
@@ -236,9 +239,9 @@ Assuming that the temperatures are normally distributed. Does the data support t
 ```{r fig.align='center', out.width = '40%'}
 include_graphics("week10/coatingDataDIff.png")
 ```
-After some algebra (using the given formulas), we have $D =2$ and $s_d=2.28$.
+After some algebra (using the given formulas), we have $\bar{d} =2$ and $s_d=2.28$. We use Greek letter $\Delta$ to denote the population difference between after and before coating populations. The next are steps for the formal testing hypothesis.
 
-**Step 1**. The claim is that *coating increases the mean operating temperature*. That is  D = coating. temp – no-coating.temp > 0.
+**Step 1**. The claim is that *coating increases the mean operating temperature*. That is  $\Delta$ = coating. temp – no-coating.temp > 0.
 
 
 **Step 2**.  Setting up the null and alternative hypotheses
@@ -248,7 +251,7 @@ $$H_0: \ \Delta  \le 0  \  \  versus   \    \    H_a: \ \Delta > 0$$
  
 **Step 3**. The test statistic is defined by
 $$
-TS = \frac{D - 0}{s_d/\sqrt{n}} = \frac{2-0}{2.28/\sqrt{6}} \approx 2.15.
+TS = \frac{\bar{d} - 0}{s_d/\sqrt{n}} = \frac{2-0}{2.28/\sqrt{6}} \approx 2.15.
 $$
 
 **Step 4**. The critical value of this right-tailed test is given by
@@ -261,6 +264,13 @@ include_graphics("week10/example02.png")
 **Step 5**. Since the test statistic is in the rejection region, we **reject** the null hypothesis $H_0: \ \Delta \le 0$ and **conclude** the alternative hypothesis $H_a: \ \Delta > 0$.
 
 **Step 6**. We conclude that the protective coating on the exterior of a printer increases its operating temperature.
+
+\
+
+<center><a href="https://mat121.s3.amazonaws.com/paired-t-test.mp4"><img src = "https://github.com/pengdsci/MAT121/blob/main/VideoIcon.png?raw=true" width="400" height="250"></a>
+
+\
+
 
 
 
