--- a/notes/w09-NormalTests.Rmd
+++ b/notes/w09-NormalTests.Rmd
@@ -336,7 +336,7 @@ The App for a normal test of the population mean is at: (https://wcu-peng.shinya
 <!--center><a href="https://mat121.s3.amazonaws.com/ZTest-Pval.mp4"><img src = "https://github.com/pengdsci/MAT121/blob/main/VideoIcon.png?raw=true" width="400" height="250"></a-->
 
 
-<font color = "red">Note that the App requires the **standard deviation of the sample**. If you are given the sample variance, you need to take square of it to get the standar deviation.</font>
+<font color = "red">Note that the App requires the **standard deviation of the sample**. If you are given the sample variance, you need to take square root of it to get the standard deviation.</font>
 
 \
 
